[package]
name = "inomg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
async-lock = "3.2.0"
env_logger = "0.10.1"
event-listener-primitives = "2.0.1"
futures-lite = "2.1.0"
mediasoup = "0.14.0"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
